# appmenu-gtk-module-wayland

./: .gitignore  CMakeLists.txt  README.md  meson.build  meson_options.txt
data/: org.appmenu.gtk-module.gschema.xml
lib/: meson.build  unity-gtk-action-group.c  unity-gtk-action.c  unity-gtk-menu-item-private.h  unity-gtk-menu-item.c  unity-gtk-menu-section.c  unity-gtk-menu-shell.c
src/: appmenu-gtk-module.c  blacklist.c  datastructs-private.h  datastructs.c  datastructs.h  hijack.c  meson.build  platform.c  platform.h  support.c  support.h
src/gtk-2.0/: meson.build
src/gtk-3.0/: meson.build
wayland/protocols/: appmenu.xml  xdg-decoration-unstable-v1.xml  xdg-shell.xml
